header e login novos

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -13,7 +13,7 @@
     }
     
     :root {
-      --primary-blue: #1e3a5f;
+      --primary-blue: #082d4e;
       --primary-gold: #c9a961;
       --primary-gold-hover: #b89751;
       --light-gray: #f5f7fa;
@@ -280,8 +280,7 @@
     </form>
 
     <div class="footer-info">
-      <p>&copy; 2024 OF Distribuidora. Todos os direitos reservados.</p>
-      <p>Problemas para acessar? Entre em contato com o <a href="#">suporte</a></p>
+      <p>&copy; 2025 OF Distribuidora. Todos os direitos reservados.</p>
     </div>
   </div>
 </body>
