--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -345,8 +345,8 @@
             </a>
             <div class="dropdown-menu">
               <a href="/fluxo-caixa">💰 Fluxo de Caixa</a>
-              <a href="/contas-receber">🧾 Contas a Receber</a>
-              <a href="/contas-pagar">💸 Contas a Pagar</a>
+              <a href="/contas-a-receber">🧾 Contas a Receber</a>
+              <a href="/contas-a-pagar">💸 Contas a Pagar</a>
               <a href="/inadimplencia">🚨 Inadimplência</a>
               <a href="/dre">📈 DRE</a>
             </div>
