--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -366,7 +366,7 @@
           </div>
 
           <div class="nav-item">
-            <a href="/backup" class="<%= locals.currentPage === 'backup' ? 'active' : '' %>">
+            <a href="/" class="<%= locals.currentPage === 'backup' ? 'active' : '' %>">
               <span class="menu-icon">💾</span> Backup
             </a>
           </div>
